Cyberduck
https://cyberduck.io/

6.1.1
- [Feature] Server side copy of files (OneDrive)
- [Bugfix] Missing x-amz-server-side-encryption header when creating folders (S3) (#9378)
- [Bugfix] Preserve content type when overwriting files (Google Drive)
- [Bugfix] Missing registered protocols (CLI)

6.1
- [Feature] Search files fast without recursively listing directories (OneDrive)
- [Feature] Search files fast without recursively listing directories (S3)
- [Feature] Search files fast without recursively listing directories (Dropbox)
- [Feature] Search files fast without recursively listing directories (Google Drive)
- [Feature] Group protocols by type in bookmark window
- [Bugfix] Missing x-amz-server-side-encryption header when creating folders (S3) (#9378)
- [Bugfix] Interoperability with vault version 6 (Cryptomator)
- [Bugfix] Missing content length header in uploads to SharePoint Online (OneDrive)
- [Bugfix] Always trust invalid certificate setting not remembered (Windows)
- [Bugfix] Unable to rename files larger than 5 GB (S3) (#9983)
- [Bugfix] Handle expired authentication token (Backblaze B2)

6.0.4 [https://trac.cyberduck.io/milestone/6.0.4]
- [Bugfix] Failure to upload to root of vault (Cryptomator)
- [Bugfix] Disable x-amz-request-payer header for non AWS endpoints (S3)

6.0.2 [https://trac.cyberduck.io/milestone/6.0.2]
- [Bugfix] Invalid version number format for Mac App Store (Mac)

6.0.1 [https://trac.cyberduck.io/milestone/6.0.1]
- [Bugfix] New connections do not authenticate (Dropbox) (#9932)
- [Bugfix] Large file uploads do not resume (Backblaze B2) (#9935)
- [Bugfix] Failure listing folders with whitespace (OneDrive) (#9937)
- [Bugfix] Failure duplicating files (FTP) (#9933)
- [Bugfix] Failure uploading files with temporary filename option enabled (Backblaze B2)
- [Bugfix] Failure connecting to local disk (Windows)
- [Bugfix] Multipart uploads fail if the user lacks permission to list multipart uploads (S3) (#9948)